<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/login_logo"
                app:srcCompat="@drawable/login_logo"
                android:layout_gravity="center_horizontal"/>


            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/login_slogan1"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/svg_account"
                android:ems="10"
                android:hint="@string/login_by_username_username_hit"
                android:inputType="textPersonName"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/password"
                android:drawableStart="@drawable/svg_password"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/login_by_username_password_hit"
                android:inputType="textPassword"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/submit_login"
                style="@style/zButton"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/login_by_username_submit" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_by_username_register"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_marginBottom="50dp"
                android:textColor="#ffffff" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>