<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <include layout="@layout/navigation" />

    <LinearLayout
        android:id="@+id/nav_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/icon_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:minHeight="100dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/main_icon_1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_icon_1_title"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/icon_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:minHeight="100dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/main_icon_2" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_icon_2_title"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/icon_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:minHeight="100dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/main_icon_3" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_icon_3_title"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/icon_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:minHeight="100dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/main_icon_4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_icon_4_title"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/icon_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:minHeight="100dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/main_icon_5"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_icon_5_title"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nav_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:background="#f6f6f6"
        android:fillViewport="true"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Under construction"/>

    </android.support.v4.widget.NestedScrollView>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nav_my"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:background="#f6f6f6"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@color/button_bg"
                android:padding="10dp"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/image"
                    android:src="@drawable/tmp_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textColor="@color/white"
                    android:text="NAME：ZHANG SAN\nGENDER：MALE" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Personal information"
                android:textColor="@color/gray3"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>
            <include layout="@layout/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Consultation history"
                android:textColor="@color/gray3"
                android:textSize="16sp"
                android:layout_marginStart="20dp"/>
            <include layout="@layout/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My consultation progress"
                android:textColor="@color/gray3"
                android:textSize="16sp"
                android:layout_marginStart="20dp"/>
            <include layout="@layout/line" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Settings"
                android:textColor="@color/gray3"
                android:textSize="16sp"
                android:layout_marginStart="20dp"/>
            <include layout="@layout/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Help and support"
                android:textColor="@color/gray3"
                android:textSize="16sp"
                android:layout_marginStart="20dp"/>
            <include layout="@layout/line" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>